[tool.poetry]
name = "plutus-bench"
version = "0.1.0"
description = "Create a mock environment for Plutus Smart Contract transactions."
authors = ["Niels Mündler <n.muendler@posteo.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plutus_bench"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
uplc = "^1.0.7"
pycardano = {git = "https://github.com/Python-Cardano/pycardano", branch = "main"}
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
starlette = "^0.37.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
opshin = "^0.23.0"
hypothesis = "^6.98.2"
parameterized = "^0.9.0"
black = "^24.4.0"
pre-commit = "^3.3.2"
coverage = "<8.0"
pytest = ">=7.3.1,<9.0.0"
coveralls = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
