[package]
name = "always-succeeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
hex = "0.4.3"
minicbor = "0.18.0"

[dependencies.naumachia]
git = "https://github.com/ImperatorLang/naumachia"
rev = "14b988141c5a805069c04da707c30f6a35a1da16"

