[package]
name = "always-succeeds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
hex = "0.4.3"
minicbor = "0.18.0"

[dependencies.naumachia]
git = "https://github.com/ImperatorLang/naumachia"
rev = "0a509c98f1f0685cd930fa806fcff1379641dd0c"

