[package]
name = "gift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
hex = "0.4.3"
minicbor = "0.18.0"

[dependencies.naumachia]
git = "https://github.com/ImperatorLang/naumachia"
rev = "6e5f30e02476e736ce9df9f9ae463bc800d1c03a"

